# catalyst-cmake-deps

./: CMakeLists.txt
glad/: gl.h
